// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingBlock matches snapshot correctly 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug"
  >
    <h1
      as="h1"
      data-node-view-content=""
      style="white-space: pre-wrap;"
    />
    <button
      aria-haspopup="dialog"
      class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fXZnrp-size-sm brd-c-ivBjhy brd-c-iAZzvg brd-c-glpRAv"
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        data-testid="mock-icon-DragSecondary"
      />
    </button>
  </div>
</div>
`;

exports[`HeadingBlock renders correspond heading according to level 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug"
  >
    <h2
      as="h2"
      data-node-view-content=""
      style="white-space: pre-wrap;"
    />
    <button
      aria-haspopup="dialog"
      class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fXZnrp-size-sm brd-c-ivBjhy brd-c-iAZzvg"
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        data-testid="mock-icon-DragSecondary"
      />
    </button>
  </div>
</div>
`;
